--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:db": "npx prisma dev",
+    "gen:migration": "npx prisma migrate dev --name",
+    "gen:client": "npx prisma generate",
+    "drop:db": "npx prisma migrate reset --force",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
