--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "start:db": "npx prisma dev",
     "gen:migration": "npx prisma migrate dev --name",
     "gen:client": "npx prisma generate",
